cmake_minimum_required(VERSION 3.16)
project(ITP1)

set(CMAKE_CXX_STANDARD 14)

add_executable(ITP1 1_A.cpp 1_B.cpp 1_C.cpp 1_D.cpp 2_A.cpp 2_B.cpp 2_C.cpp 2_D.cpp 3_A.cpp 3_B.cpp 3_C.cpp 3_D.cpp 4_A.cpp 4_B.cpp 4_C.cpp 4_D.cpp 5_A.cpp 5_B.cpp 5_C.cpp 5_D.cpp 6_A.cpp 6_B.cpp 6_C.cpp 6_D.cpp 7_A.cpp 7_B.cpp 7_C.cpp 7_D.cpp 8_A.cpp 8_B.cpp 8_C.cpp)